--- a/zh-cn.html
+++ b/zh-cn.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
-    <title>Haozhe Li</title>
+    <title>天秤</title>
     <meta name="keywords" content='李浩哲, Haozhe Li, haozheli, Li Haozhe, lihaozhe'>
-    <meta name="description" content='Personal website of Haozhe Li'>
+    <meta name="description" content='Haozhe Li的个人网站'>
     <meta name="author" content='Haozhe Li'>
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/logo_main.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/logo_main.png">
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
@@ -50,13 +50,13 @@
             <div class="col-md-12 text-center">
               <h1 class="mb-4"><a href="index.html" class="logo">Haozhe Li</a></h1>
               <ul>
-                <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Skills</span></a></li>
-                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="gallery/index.html"><span><small>05</small>Gallery</span></a></li>
-                <li><a href="blog.html"><span><small>06</small>Blog</span></a></li>
-                <li><a href="contact.html"><span><small>07</small>Contact</span></a></li>
+                <li class="active"><a href="index.html"><span><small>01</small> 首页</span></a></li>
+                <li><a href="about.html"><span><small>02</small> 简历</span></a></li>
+                <li><a href="services.html"><span><small>03</small> 技能</span></a></li>
+                <li><a href="portfolio.html"><span><small>04</small> 作品集</span></a></li>
+                <li><a href="gallery/index.html"><span><small>05</small> 画廊</span></a></li>
+                <li><a href="blog.html"><span><small>06</small> 博客</span></a></li>
+                <li><a href="contact.html"><span><small>07</small> 联系方式</span></a></li>
                 <select onchange="window.location=this.value;">
                   <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language 🌍</option>
                   <option value="en-us.html">English (US)</option>
@@ -80,9 +80,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/logo_main.png);"></span>Haozhe Li</a>
-              </div>
+              <div class="colorlib-navbar-brand"><a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/logo_main.png);"></span>李浩哲</a></div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
           </div>
@@ -95,8 +93,8 @@
           <div class="container">
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p><a href="#" class="scroll">Hello! I'm</a></p>
-                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Haozhe Li</h1>
+                <p><a href="#" class="scroll">您好！我是</p>
+                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">李浩哲</h1>
               </div>
             </div>
           </div>
@@ -107,8 +105,8 @@
           <div class="container">
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p><a href="#" class="scroll">I'm from Beijing</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A student loves everything</h1>
+                <p><a href="#" class="scroll">我来自北京</a></p>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">热爱世界的学生</h1>
               </div>
             </div>
           </div>
@@ -123,10 +121,10 @@
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
-                <h1 class="bold-text">About</h1>
+                <h1 class="bold-text">关于</h1>
                 <div class="p-5">
-                  <h2 class="mb-5">Hi! I'm Haozhe Li</h2>
-                  <p>Hi, I'm Haozhe Li (Howard), a Computer Science and Music student at the University of Illinois. I'm a cellist and programmer with a lifelong love for both. I've played in symphony orchestras for almost a decade and have gained proficiency in Python and Java. I'm also a popular video creator, publishing tutorials and showcasing my cinematic shots and video editing skills on Bilibili and YouTube, with millions of views.</p>
+                  <h2 class="mb-5">您好！我叫李浩哲</h2>
+                  <p>大家好，我是Haozhe Li （ Howard ） ，伊利诺伊大学计算机科学与音乐专业的学生。我是一个大提琴家和程序员，对两者都有终身的热爱。我已经在交响乐团演奏了近十年，并且已经精通Python和Java。我也是一个受欢迎的视频创作者，发布教程，并在Bilibili和YouTube上展示我的电影镜头和视频编辑技巧，拥有数百万的观看次数。</p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog"><span class="icon-youtube"></span></a></li>
                     <li><a href="https://www.linkedin.com/in/haozhe-li-306742252/"><span class="icon-linkedin"></span></a></li>
@@ -134,8 +132,8 @@
                     <li><a href="https://github.com/Haozhe-Li"><span class="icon-github"></span></a></li>
                     <li><a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0"><span class="icon-video-camera"></span></a></li>
                   </ul>
-                  <h5>Contact me here!</h5>
-                  <p>Email: <a href="mailto:hi@haozheli.com">hi@haozheli.com</a></p>
+                  <h5>联系我!</h5>
+                  <p>邮箱： <a href="mailto:hi@haozheli.com">hi@haozheli.com</a></p>
                 </div>
               </div>
             </div>
@@ -146,9 +144,7 @@
       <section class="ftco-section">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
-            <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>What i do</span>
-              <h2>My Skills</h2>
+            <div class="col-md-7 text-center heading-section ftco-animate"><span>我会什么</span><h2>我的技能</h2>
             </div>
           </div>
           <div class="row">
@@ -156,8 +152,8 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">C++ Java Python Programming</h3>
-                  <h3 class="heading">HTML/CSS</h3>
+                  <h3 class="heading">C++/Java/Python编程</h3>
+                  <h3 class="heading">HTML和CSS</h3>
                 </div>
               </div>      
             </div>
@@ -165,10 +161,10 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-video-camera"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">Photography</h3>
-                  <h3 class="heading">Filmmaking</h3>
-                  <h3 class="heading">Color Grading</h3>
-                  <h3 class="heading">Visual Effects</h3>
+                  <h3 class="heading">摄影</h3>
+                  <h3 class="heading">视频制作</h3>
+                  <h3 class="heading">视频调色</h3>
+                  <h3 class="heading">视频特效</h3>
                 </div>
               </div>      
             </div>
@@ -176,8 +172,8 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-music"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">Cello/Piano</h3>
-                  <h3 class="heading">Music Production</h3>
+                  <h3 class="heading">大提琴/钢琴</h3>
+                  <h3 class="heading">音乐制作</h3>
                   <h3 class="heading">Music XML</h3>
                 </div>
               </div>    
@@ -189,9 +185,7 @@
       <section class="ftco-section">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
-            <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>Portfolio</span>
-              <h2>Checkout a few of my works</h2>
+            <div class="col-md-7 text-center heading-section ftco-animate"><span>作品集</span><h2>请查看我的作品</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -202,10 +196,10 @@
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Programming</h4>
-              <h2 class="heading"><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">Machine Project CS 124</a></h2>
-              <p>The machine project of introduction to computer science I - CS 124</p>
-              <p><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">View Project</a></p>
+              <h4 class="subheading">编程</h4>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">机器项目CS 124</a></h2>
+              <p>计算机科学入门的机器项目I - CS 124</p>
+              <p><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">查看项目</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -215,10 +209,10 @@
               </div>
             </a>
             <div class="text order-1">
-              <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io">My Personal Website</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
+              <h4 class="subheading">网页设计</h4>
+              <h2 class="heading"><a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io">我的个人网站</a></h2>
+              <p>我在业余时间学习了html以及css，并搭建了我的个人网站</p>
+              <p><a href="#">查看项目</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -228,10 +222,10 @@
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Filmmaking</h4>
-              <h2 class="heading"><a href="https://www.youtube.com/watch?v=-D5_GKfghpU&t=3s">Learn Visual Effects in 90 Seconds</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
+              <h4 class="subheading">视频制作</h4>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=-D5_GKfghpU&t=3s">【90秒】达芬奇智能全自动功能 新手向 干货教程</a></h2>
+              <p>我介绍了如何在Davinci Resolve中使用跟踪器进行特效制作</p>
+              <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">查看项目</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -241,10 +235,10 @@
               </div>
             </a>
             <div class="text order-1">
-              <h4 class="subheading">Filmmaking</h4>
-              <h2 class="heading"><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">QingDao - Summer</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
+              <h4 class="subheading">视频制作</h4>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">【毕业旅行】海、山、楼中的夏日青岛 4K 电影感</a></h2>
+              <p>我在业余时间学习了html以及css，并搭建了我的个人网站</p>
+              <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">查看项目</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -254,10 +248,10 @@
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Music</h4>
-              <h2 class="heading"><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">Despacito - Duo Cellos</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">View Project</a></p>
+              <h4 class="subheading">音乐</h4>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">Despacito - 双大提琴</a></h2>
+              <p>我在业余时间学习了html以及css，并搭建了我的个人网站</p>
+              <p><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">查看项目</a></p>
             </div>
           </div>
         </div>
@@ -267,39 +261,30 @@
       <section class="ftco-section ftco-counter" id="section-counter">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
-            <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>Video Blog</span>
-              <h2>As the founder of WeLog Studio, I'm committed to providing the best video production tips and tools, so that everyone can easily create high-quality video content. We also share the latest news and trends in filmmaking and digital technology.</h2>
-              <a href="https://www.welogstudio.com">Know More About WeLog Studio</a>
-            </div>
+            <div class="col-md-7 text-center heading-section ftco-animate"><span>视频博客</span><h2>作为WeLog Studio的创始人，我致力于提供最好的视频制作技巧和工具，让每个人都可以轻松创建高质量的视频内容。我们还分享了电影制作和数字技术的最新新闻和趋势。</h2><a href="https://www.welogstudio.com">了解有关WeLog Studio的更多信息</a></div>
           </div>
           <div class="row d-flex justify-content-start">
             <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
               <div class="block-18">
-                <div class="text">
-                  <span class="ftco-label">With Total Views Over</span>
-                  <strong class="number" data-number="1600000">0</strong>
-                </div>
+                <div class="text"><span class="ftco-label">播放量超过</span>
+                  于
+                  <strong class="number" data-number="1600000">0</strong></div>
               </div>
             </div>
           </div>
           <div class="row d-flex justify-content-center">
             <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
               <div class="block-18">
-                <div class="text">
-                  <span class="ftco-label">With Subscribes Over</span>
-                  <strong class="number" data-number="10000">0</strong>
-                </div>
+                <div class="text"><span class="ftco-label">订阅超过</span>
+                  <strong class="number" data-number="10000">0</strong></div>
               </div>
             </div>
           </div>
           <div class="row d-flex justify-content-end">
-            <div class="col-md-5 counter-wrap ftco-animate">
+            <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
               <div class="block-18">
-                <div class="text">
-                <span class="ftco-label">Total Creations Over</span>
-                  <strong class="number" data-number="100">0</strong>
-                </div>
+                <div class="text"><span class="ftco-label">作品超过</span>
+                  <strong class="number" data-number="100">0</strong></div>
               </div>
             </div>
           </div>
@@ -320,7 +305,7 @@
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact</h2>
+                <h2 class="mb-3">联系</h2>
                 <p class="h3 email"><a href="mailto:hi@haozheli.com">hi@haozheli.com</a></p>
               </div>
             </div>
@@ -329,7 +314,7 @@
             <div class="col-md-12 text-center">
 
               <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;Haozhe Li<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is based on template <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+      Copyright © Haozhe Li<script>document.write(new Date().getFullYear());</script>保留所有权利|本网站基于<i class="icon-heart" aria-hidden="true" style="color: red;"></i> <a href="https://colorlib.com" target="_blank">Colorlib</a>的模板</p>
             </div>
           </div>
         </div>
@@ -360,17 +345,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
-
-    <script type="text/javascript">
-
-      var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
-      localStorage.setItem('locale', language)
-      if (language.indexOf("zh-") !== -1) {
-        window.location = 'zh-cn.html'
-      }  else {
-        window.location = 'en-us.html'
-      }
-    </script>
     
   </body>
 </html>
