--- a/zh-cn.html
+++ b/zh-cn.html
@@ -58,7 +58,7 @@
                 <li><a href="blog.html"><span><small>06</small> 博客</span></a></li>
                 <li><a href="contact.html"><span><small>07</small> 联系方式</span></a></li>
                 <select onchange="window.location=this.value;">
-                  <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language 🌍</option>
+                  <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language</option>
                   <option value="en-us.html">English (US)</option>
                   <option value="zh-cn.html">简体中文</option>
                   <option value="https://www-haozheli-com.translate.goog/zh-cn.html?_x_tr_sl=zh-CN&_x_tr_tl=zh-TW&_x_tr_hl=zh-TW&_x_tr_pto=wapp">繁體中文 (Google Translate)</option>
