--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <li><a href="contact.html"><span><small>07</small>Contact</span></a></li>
                 <select onchange="window.location=this.value;">
                   <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language</option>
-                  <option value="#">English (US)</option>
-                  <option value="#">简体中文</option>
+                  <option value="index.html">English (US)</option>
+                  <option value="https://www.haozheli.com/zh/">简体中文</option>
                   <option value="https://www-haozheli-com.translate.goog/zh-cn.html?_x_tr_sl=zh-CN&_x_tr_tl=zh-TW&_x_tr_hl=zh-TW&_x_tr_pto=wapp">繁體中文 (Google Translate)</option>
                   <option value="https://www-haozheli-com.translate.goog/en-us?_x_tr_sl=en&_x_tr_tl=ja&_x_tr_hl=ja&_x_tr_pto=wapp">日本 (Google Translate)</option>
                   <option value="https://www-haozheli-com.translate.goog/en-us?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 (Google Translate)</option>
