--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="text order-1">
               <h4 class="subheading">Web Design</h4>
               <h2 class="heading"><a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io">My Personal Website</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <p>I taught myself html and css after school, and built my own personal website</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -230,7 +230,7 @@
             <div class="text">
               <h4 class="subheading">Filmmaking</h4>
               <h2 class="heading"><a href="https://www.youtube.com/watch?v=-D5_GKfghpU&t=3s">Learn Visual Effects in 90 Seconds</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <p>In this video I explain how to use Davinci Resolve's tracker to create cool video effects</p>
               <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
             </div>
           </div>
@@ -243,7 +243,7 @@
             <div class="text order-1">
               <h4 class="subheading">Filmmaking</h4>
               <h2 class="heading"><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">QingDao - Summer</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <p>4K 60FPS HDR for aerial photography journey</p>
               <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
             </div>
           </div>
@@ -256,7 +256,7 @@
             <div class="text">
               <h4 class="subheading">Music</h4>
               <h2 class="heading"><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">Despacito - Duo Cellos</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <p>I changed the popular piece Despacito to a double cello version and played it with my friend</p>
               <p><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">View Project</a></p>
             </div>
           </div>
