--- a/index.html
+++ b/index.html
@@ -57,17 +57,6 @@
                 <li><a href="gallery/index.html"><span><small>05</small>Gallery</span></a></li>
                 <li><a href="blog.html"><span><small>06</small>Blog</span></a></li>
                 <li><a href="contact.html"><span><small>07</small>Contact</span></a></li>
-                <select onchange="window.location=this.value;">
-                  <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language</option>
-                  <option value="index.html">English (US)</option>
-                  <option value="https://www.haozheli.com/zh/">简体中文</option>
-                  <option value="https://www-haozheli-com.translate.goog/zh-cn.html?_x_tr_sl=zh-CN&_x_tr_tl=zh-TW&_x_tr_hl=zh-TW&_x_tr_pto=wapp">繁體中文 (Google Translate)</option>
-                  <option value="https://www-haozheli-com.translate.goog/en-us?_x_tr_sl=en&_x_tr_tl=ja&_x_tr_hl=ja&_x_tr_pto=wapp">日本 (Google Translate)</option>
-                  <option value="https://www-haozheli-com.translate.goog/en-us?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 (Google Translate)</option>
-                  <option value="https://www-haozheli-com.translate.goog/en-us?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français (Google Translate)</option>
-                  <option value="https://www-haozheli-com.translate.goog/en-us?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch (Google Translate)</option>
-                  <option value="https://www-haozheli-com.translate.goog/en-us?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other (Google Translate)</option>
-                </select>
               </ul>
             </div>
           </div>
@@ -360,6 +349,15 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
-    
+    <script type="text/javascript">
+
+      var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
+      localStorage.setItem('locale', language)
+      if (language.indexOf("zh-") !== -1) {
+        window.location = 'https://www.haozheli.com/zh/'
+      }  else {
+        window.location = 'index.html'
+      }
+    </script>
   </body>
 </html>
