--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
                 <li><a href="services.html"><span><small>03</small>Skills</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="gallery/index.html"><span><small>05</small>Gallery</span></a></li>
+                <li><a href="https//www.haozheli.com/gallery/"><span><small>05</small>Gallery</span></a></li>
                 <li><a href="blog.html"><span><small>06</small>Blog</span></a></li>
                 <li><a href="contact.html"><span><small>07</small>Contact</span></a></li>
               </ul>
@@ -349,14 +349,13 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+
     <script type="text/javascript">
 
       var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
       localStorage.setItem('locale', language)
       if (language.indexOf("zh-") !== -1) {
         window.location = 'https://www.haozheli.com/zh/'
-      }  else {
-        window.location = 'index.html'
       }
     </script>
   </body>
