--- a/index.html
+++ b/index.html
@@ -224,15 +224,15 @@
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://www.youtube.com/watch?v=fdMdneL_YtU" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/qingdao.jpeg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/qingdao.jpeg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text order-1">
               <h4 class="subheading">Filmmaking</h4>
-              <h2 class="heading"><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">QingDao - Summer</a></h2>
-              <p>4K 60FPS HDR for aerial photography journey</p>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">Qingdao - Summer</a></h2>
+              <p>4K 60FPS HDR for aerial photography journey. This is one of my favorite video I produced.</p>
               <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
             </div>
           </div>
