--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
                         <div class="text">
                             <h4 class="subheading">Programming</h4>
                             <h2 class="heading"><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">Machine Project CS 124</a></h2>
-                            <p>The machine project of introduction to computer science I - CS 124</p>
+                            <p>This machine project is a vital component of Introduction to Computer Science I - CS 124. Using Java, I developed an innovative Android application, incorporating a plethora of captivating features.</p>
                             <p><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">View Project</a></p>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                         <div class="text order-1">
                             <h4 class="subheading">Web Design</h4>
                             <h2 class="heading"><a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io">My Personal Website</a></h2>
-                            <p>I taught myself html and css after school, and built my own personal website</p>
+                            <p>During my free time, I dedicated myself to self-learning HTML and CSS, resulting in the successful creation of my own personal website. It serves as a testament to my perseverance and hard work.</p>
                             <p><a href="#">View Project</a></p>
                         </div>
                     </div>
@@ -122,15 +122,15 @@
                         <div class="text">
                             <h4 class="subheading">Filmmaking</h4>
                             <h2 class="heading"><a href="https://www.youtube.com/watch?v=-D5_GKfghpU&t=3s">Learn Visual Effects in 90 Seconds</a></h2>
-                            <p>In this video I explain how to use Davinci Resolve's tracker to create cool video effects</p>
+                            <p>Through this video, I provide a detailed demonstration on how to masterfully employ Davinci Resolve's tracker function to create awe-inspiring visual effects for your videos.</p>
                             <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
                         </div>
                     </div>
                     <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                         <a href="https://www.youtube.com/watch?v=fdMdneL_YtU"" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/qingdao.jpeg'); " data-scrollax=" properties: { translateY: '-30%'}">
-                            <div class="icon d-flex text-center justify-content-center align-items-center">
-                                <span class="icon-search"></span>
-                            </div>
+                        <div class="icon d-flex text-center justify-content-center align-items-center">
+                            <span class="icon-search"></span>
+                        </div>
                         </a>
                         <div class="text order-1">
                             <h4 class="subheading">Filmmaking</h4>
@@ -148,7 +148,7 @@
                         <div class="text">
                             <h4 class="subheading">Music</h4>
                             <h2 class="heading"><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">Despacito - Duo Cellos</a></h2>
-                            <p>I changed the popular piece Despacito to a double cello version and played it with my friend</p>
+                            <p>In harmony with my friends, we infused the popular song "Despacito" into the sounds of two cellos. Together, we collaborated and performed this beautiful piece with our hearts intertwined.</p>
                             <p><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">View Project</a></p>
                         </div>
                     </div>
