--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="text">
               <h4 class="subheading">Programming</h4>
               <h2 class="heading"><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">Machine Project CS 124</a></h2>
-              <p>The machine project of introduction to computer science I - CS 124</p>
+              <p>This machine project is a vital component of Introduction to Computer Science I - CS 124. Using Java, I developed an innovative Android application, incorporating a plethora of captivating features.</p>
               <p><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">View Project</a></p>
             </div>
           </div>
@@ -206,7 +206,7 @@
             <div class="text order-1">
               <h4 class="subheading">Web Design</h4>
               <h2 class="heading"><a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io">My Personal Website</a></h2>
-              <p>I taught myself html and css after school, and built my own personal website</p>
+              <p>During my free time, I dedicated myself to self-learning HTML and CSS, resulting in the successful creation of my own personal website. It serves as a testament to my perseverance and hard work.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -219,7 +219,7 @@
             <div class="text">
               <h4 class="subheading">Filmmaking</h4>
               <h2 class="heading"><a href="https://www.youtube.com/watch?v=-D5_GKfghpU&t=3s">Learn Visual Effects in 90 Seconds</a></h2>
-              <p>In this video I explain how to use Davinci Resolve's tracker to create cool video effects</p>
+              <p>Through this video, I provide a detailed demonstration on how to masterfully employ Davinci Resolve's tracker function to create awe-inspiring visual effects for your videos.</p>
               <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
             </div>
           </div>
@@ -245,7 +245,7 @@
             <div class="text">
               <h4 class="subheading">Music</h4>
               <h2 class="heading"><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">Despacito - Duo Cellos</a></h2>
-              <p>I changed the popular piece Despacito to a double cello version and played it with my friend</p>
+              <p>In harmony with my friends, we infused the popular song "Despacito" into the sounds of two cellos. Together, we collaborated and performed this beautiful piece with our hearts intertwined.</p>
               <p><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">View Project</a></p>
             </div>
           </div>
@@ -258,7 +258,7 @@
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Video Blog</span>
-              <h2>As the founder of WeLog Studio, I'm committed to providing the best video production tips and tools, so that everyone can easily create high-quality video content. We also share the latest news and trends in filmmaking and digital technology.</h2>
+              <h2>As the visionary behind WeLog Studio, my unwavering commitment is to provide the best video production tips and tools for all, ensuring that anyone can effortlessly create high-quality video content. We also strive to share the latest developments and trends in film production and digital technology, empowering you to unlock limitless creative potential.</h2>
               <a href="https://www.welogstudio.com">Know More About WeLog Studio</a>
             </div>
           </div>
