--- a/index.html
+++ b/index.html
@@ -318,7 +318,8 @@
             <div class="col-md-12 text-center">
 
               <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;Haozhe Li<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is based on template <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                Copyright &copy;Haozhe Li<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is powered by <a href="https://colorlib.com" target="_blank">Colorlib</a> and <a href="https://github.io" target="_blank">Github Pages</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
           </div>
         </div>
