--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
                     <div class="col-md-12 text-center">
 
                         <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://haozheli.com" target="_blank">Haozhe Li</a>
+                            Copyright &copy;Haozhe Li<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is powered by <a href="https://colorlib.com" target="_blank">Colorlib</a> and <a href="https://github.io" target="_blank">Github Pages</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                     </div>
                 </div>
