--- a/404.html
+++ b/404.html
@@ -473,7 +473,7 @@
                     </a>
                     <p><br></p>
                     <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg" onclick="report()">
-                        REPORT MISSING LINKS
+                        REPORT MISSING LINK
                     </button>
                 </div>
             </div>
@@ -483,7 +483,7 @@
 </div>
             </div>
         </div>
-        <form id="report-form" action="https://formspree.io/f/mzbqbwod" method="post">
+        <form id="report-form" action="https://formspree.io/f/xnqyooqq" method="post">
             <label for="url">URL</label>
             <input type="text" name="URL" id="url">
         </form>
