update bilibili logo

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+	  <script src="https://kit.fontawesome.com/6db6799e59.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -90,11 +91,11 @@
                   <h2 class="mb-5">Hi! I'm Haozhe Li</h2>
                   <p>Hi, I'm Haozhe Li (Howard), a Computer Science and Music student at the University of Illinois. I'm a cellist and programmer with a lifelong love for both. I've played in symphony orchestras for almost a decade and have gained proficiency in Python and Java. I'm also a popular video creator, publishing tutorials and showcasing my cinematic shots and video editing skills on Bilibili and YouTube, with millions of views.</p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
+					  <li><a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0"><span class="fa-brands fa-bilibili"></span></a></li>
 					  <li><a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog"><span class="icon-youtube"></span></a></li>
 					  <li><a href="https://www.linkedin.com/in/haozhe-li-306742252/"><span class="icon-linkedin"></span></a></li>
 					  <li><a href="https://www.instagram.com/haozheli04/"><span class="icon-instagram"></span></a></li>
 					  <li><a href="https://github.com/Haozhe-Li"><span class="icon-github"></span></a></li>
-					  <li><a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0"><span class="icon-video-camera"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="mailto:hi@haozheli.com">hi@haozheli.com</a></p>
@@ -252,11 +253,11 @@
 					<div class="col-md-5 text-center">
 						<div class="ftco-footer-widget mb-5">
 							<ul class="ftco-footer-social list-unstyled">
+								<li><a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0"><span class="fa-brands fa-bilibili"></span></a></li>
 								<li><a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog"><span class="icon-youtube"></span></a></li>
 								<li><a href="https://www.linkedin.com/in/haozhe-li-306742252/"><span class="icon-linkedin"></span></a></li>
 								<li><a href="https://www.instagram.com/haozheli04/"><span class="icon-instagram"></span></a></li>
 								<li><a href="https://github.com/Haozhe-Li"><span class="icon-github"></span></a></li>
-								<li><a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0"><span class="icon-video-camera"></span></a></li>
 							</ul>
 						</div>
 						<div class="ftco-footer-widget">
