--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/6db6799e59.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -127,11 +128,11 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
+                  <li><a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0"><span class="fa-brands fa-bilibili"></span></a></li>
                   <li><a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog"><span class="icon-youtube"></span></a></li>
                   <li><a href="https://www.linkedin.com/in/haozhe-li-306742252/"><span class="icon-linkedin"></span></a></li>
                   <li><a href="https://www.instagram.com/haozheli04/"><span class="icon-instagram"></span></a></li>
                   <li><a href="https://github.com/Haozhe-Li"><span class="icon-github"></span></a></li>
-                  <li><a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0"><span class="icon-video-camera"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
