--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@
 					<div class="col-md-12 text-center">
 
 						<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;Haozhe Li<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is powered by <a href="https://colorlib.com" target="_blank">Colorlib</a> and <a href="https://github.io" target="_blank">Github Pages</a>
+							Copyright &copy;Haozhe Li <script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank"><i class="fa-brands fa-wordpress"></i></a> and <a href="https://github.io" target="_blank"><i class="fa-brands fa-github"></i></a>
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 					</div>
 				</div>
