--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       (function() {
         var language = navigator.language || navigator.userLanguage; // 获取访问者的语言
         if (language.toLowerCase().startsWith('zh')) {
-          window.location.href = 'https://haozhelihoward.gitee.io'; // 英文跳转的网页链接
+          window.location.href = 'https://'; // 英文跳转的网页链接
         }
       })();
     </script>
