--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 				var language = localStorage.getItem('locale') || window.navigator.language.toLowerCase() || 'en'
 				localStorage.setItem('locale', language)
 				if (language.indexOf("zh-") !== -1) {
-					window.location = 'http://haozheli.com'
+					window.location = 'https://haozheli.cn'
           alert('监测到您正在使用中文，正在跳转至haozheli.cn')
 				}
 			</script>
