--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
                 <li><a href="services.html"><span><small>03</small>Skills</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="https://www.haozheli.com/gallery/"><span><small>05</small>Gallery</span></a></li>
+                <li><a href="https://gallery.haozheli.com/"><span><small>05</small>Gallery</span></a></li>
                 <li><a href="blog.html"><span><small>06</small>Blog</span></a></li>
                 <li><a href="contact.html"><span><small>07</small>Contact</span></a></li>
               </ul>
