--- a/portfolio.html
+++ b/portfolio.html
@@ -180,7 +180,7 @@
                     <div class="col-md-12 text-center">
 
                         <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;Haozhe Li <script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank"><i class="fa-brands fa-wordpress"></i></a> and <a href="https://github.io" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            Copyright &copy;Haozhe Li <script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank">Colorlib</a> and <a href="https://vercel.com" target="_blank"><i class="fa-solid fa-circle-caret-up"></i> Vercel</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                     </div>
                 </div>
